Fix dark mode styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,14 +9,6 @@
   --lukso-pink: #f6025b;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 html,
 body {
   height: 100%;
